--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,60 +1,64 @@
-<div class='relative bg-white shadow-lg sticky top-0 z-10 sticky:opacity-0.2'>
-  <div class='max-w-full mx-auto px-4 sm:px-6'>
-    <div class='flex flex-auto items-center border-gray-100 py-1 md:justify-start md:space-x-10'>
-      <div class='flex flex-auto flex-shrink-0 flex-1 flex-grow'>
-        <a routerLink='/'>
+<div class="relative bg-white shadow-lg sticky top-0 z-10 sticky:opacity-0.2">
+  <div class="max-w-full mx-auto px-4 sm:px-6">
+    <div class="flex flex-auto items-center border-gray-100 py-1 md:justify-start md:space-x-10">
+      <div class="flex flex-auto flex-shrink-0 flex-1 flex-grow">
+        <a routerLink="/">
           <div>
-            <svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-blue-900 inline' fill='none' viewBox='0 0 24 24'
-                 stroke='currentColor' stroke-width='2'>
-              <path stroke-linecap='round' stroke-linejoin='round'
-                    d='M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z' />
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-900 inline" fill="none" viewBox="0 0 24 24"
+                 stroke="currentColor" stroke-width="2">
+              <path stroke-linecap="round" stroke-linejoin="round"
+                    d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z" />
             </svg>
             Blog CMS
           </div>
         </a>
       </div>
-      <nav class='flex flex-shrink space-x-1'>
-        <div class='sm:hidden'>
-          <button class='flex items-center py-2 text-sm text-gray-600 rounded-lg hover:text-black' (click)='toggleNavBarModal()'>
+      <nav class="flex flex-shrink space-x-1">
+        <div class="xl:hidden">
+          <button class="flex items-center py-2 text-sm text-gray-600 rounded-lg hover:text-black"
+                  (click)="toggleNavBarModal()">
             <div>
-              <svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='currentColor'
-                   stroke-width='2'>
-                <path stroke-linecap='round' stroke-linejoin='round' d='M4 6h16M4 12h16M4 18h16' />
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                   stroke="currentColor"
+                   stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
               </svg>
             </div>
           </button>
         </div>
-        <div class='hidden sm:flex'>
-          <a class='flex items-center py-2 text-sm text-gray-600 rounded-lg hover:text-black' href='#'>
+        <div class="hidden xl:flex">
+          <a class="flex items-center py-2 text-sm text-gray-600 rounded-lg hover:text-black" href="#">
             <div>
-              <svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24'
-                   stroke='currentColor'
-                   stroke-width='2'>
-                <path stroke-linecap='round' stroke-linejoin='round'
-                      d='M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9' />
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                   stroke="currentColor"
+                   stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
               </svg>
             </div>
           </a>
         </div>
-        <div class='hidden sm:flex'>
-          <a class='flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg hover:text-black' href='#'>
-            <div class='pr-2'>
-              <svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='currentColor'
-                   stroke-width='2'>
-                <path stroke-linecap='round' stroke-linejoin='round'
-                      d='M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z' />
+        <div class="hidden xl:flex">
+          <a class="flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg hover:text-black" href="#">
+            <div class="pr-2">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                   stroke="currentColor"
+                   stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
               </svg>
             </div>
             <span>John Doe</span>
           </a>
         </div>
-        <div class='hidden sm:flex'>
-          <a class='flex items-center py-2 text-sm text-gray-600 rounded-lg hover:text-black' href='#'>
+        <div class="hidden xl:flex">
+          <a class="flex items-center py-2 text-sm text-gray-600 rounded-lg hover:text-black" href="#">
             <div>
-              <svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='currentColor'
-                   stroke-width='2'>
-                <path stroke-linecap='round' stroke-linejoin='round'
-                      d='M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1' />
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                   stroke="currentColor"
+                   stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
               </svg>
             </div>
           </a>
@@ -63,93 +67,97 @@
     </div>
   </div>
   <div [ngClass]="{'opacity-100': showNavbarModal, 'opacity-0 invisible': !showNavbarModal}"
-       class='absolute rounded-lg text-left shadow-xl transition-all w-full transition-opacity duration-300 z-10'>
-    <div class='rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-white divide-y-2 divide-gray-50'>
-      <nav class='flex flex-col gap-y-1 px-2 py-6 pb-10'>
+       class="absolute rounded-lg text-left shadow-xl transition-all w-full transition-opacity duration-300 z-10">
+    <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-white divide-y-2 divide-gray-50">
+      <nav class="flex flex-col gap-y-1 px-2 py-6 pb-10">
         <div>
-          <a class='flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-gray-100 hover:text-black'
-             routerLink='/'>
-            <div class='pr-2'>
-              <svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24'
-                   stroke='currentColor'
-                   stroke-width='2'>
-                <path stroke-linecap='round' stroke-linejoin='round'
-                      d='M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6' />
+          <a class="flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-gray-100 hover:text-black"
+             routerLink="/">
+            <div class="pr-2">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                   stroke="currentColor"
+                   stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
               </svg>
             </div>
-            <span class='ml-3'>Dashboard</span>
+            <span class="ml-3">Dashboard</span>
           </a>
         </div>
         <div>
-          <details class='group'>
+          <details class="group">
             <summary
-              class='flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg
-             cursor-pointer hover:bg-gray-100 hover:text-black'>
-              <svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24'
-                   stroke='currentColor'
-                   stroke-width='2'>
-                <path stroke-linecap='round' stroke-linejoin='round'
-                      d='M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z' />
+              class="flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg
+             cursor-pointer hover:bg-gray-100 hover:text-black">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                   stroke="currentColor"
+                   stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z" />
               </svg>
-              <span class='ml-5'>Pages</span>
-              <div class='ml-auto transition duration-300 shrink-0 group-open:-rotate-180'>
-                <svg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5'
-                     stroke='currentColor' class='w-5 h-5'>
-                  <path stroke-linecap='round' stroke-linejoin='round' d='M19.5 8.25l-7.5 7.5-7.5-7.5' />
+              <span class="ml-5">Pages</span>
+              <div class="ml-auto transition duration-300 shrink-0 group-open:-rotate-180">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                     stroke="currentColor" class="w-5 h-5">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
                 </svg>
               </div>
             </summary>
-            <nav class='mt-1.5 ml-8 flex flex-col'>
+            <nav class="mt-1.5 ml-8 flex flex-col">
               <div>
-                <a routerLink='/pages/add'
-                   class='flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-gray-100 hover:text-black'>
-                  <svg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5'
-                       stroke='currentColor' class='w-6 h-6'>
-                    <path stroke-linecap='round' stroke-linejoin='round' d='M12 5v14m7-7H5' />
+                <a routerLink="/pages/add"
+                   class="flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-gray-100 hover:text-black">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                       stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 5v14m7-7H5" />
                   </svg>
-                  <span class='ml-3 text-sm font-medium'>Page Add</span>
+                  <span class="ml-3 text-sm font-medium">Page Add</span>
                 </a>
               </div>
               <div>
-                <a routerLink='/pages/list'
-                   class='flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-gray-100 hover:text-black'>
-                  <svg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5'
-                       stroke='currentColor' class='w-6 h-6'>
-                    <path stroke-linecap='round' stroke-linejoin='round'
-                          d='M3.75 12h16.5m-16.5 3.75h16.5M3.75 19.5h16.5M5.625 4.5h12.75a1.875 1.875 0 010 3.75H5.625a1.875 1.875 0 010-3.75z' />
+                <a routerLink="/pages/list"
+                   class="flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-gray-100 hover:text-black">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                       stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                          d="M3.75 12h16.5m-16.5 3.75h16.5M3.75 19.5h16.5M5.625 4.5h12.75a1.875 1.875 0 010 3.75H5.625a1.875 1.875 0 010-3.75z" />
                   </svg>
-                  <span class='ml-3 text-sm font-medium'>Page List</span>
+                  <span class="ml-3 text-sm font-medium">Page List</span>
                 </a>
               </div>
             </nav>
           </details>
         </div>
       </nav>
-      <div class='flex flex-col gap-y-1 px-2 py-6 sticky inset-x-0 bottom-0 border-t border-gray-100'>
+      <div class="flex flex-col gap-y-1 px-2 py-6 sticky inset-x-0 bottom-0 border-t border-gray-100">
         <div>
-          <div class='flex justify-between'>
+          <div class="flex justify-between">
             <div>
-              <a class='flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-gray-100 hover:text-black' href='#'>
-                <div class='pr-2'>
-                  <svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='currentColor'
-                       stroke-width='2'>
-                    <path stroke-linecap='round' stroke-linejoin='round'
-                          d='M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z' />
+              <a class="flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-gray-100 hover:text-black"
+                 href="#">
+                <div class="pr-2">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                       stroke="currentColor"
+                       stroke-width="2">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                          d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
                   </svg>
                 </div>
-                <div class='ml-2'>John Doe</div>
+                <div class="ml-2">John Doe</div>
               </a>
             </div>
             <div>
-              <a class='flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-gray-100 hover:text-black' href='#'>
-                <div class='pr-2'>
-                  <svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='currentColor'
-                       stroke-width='2'>
-                    <path stroke-linecap='round' stroke-linejoin='round'
-                          d='M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1' />
+              <a class="flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-gray-100 hover:text-black"
+                 href="#">
+                <div class="pr-2">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                       stroke="currentColor"
+                       stroke-width="2">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                          d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
                   </svg>
                 </div>
-                <div class='ml-2'>Logout</div>
+                <div class="ml-2">Logout</div>
               </a>
             </div>
           </div>
