--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -1,99 +1,102 @@
 <app-navbar></app-navbar>
-<div class='max-w-full mx-auto'>
-  <div class='flex flex-col sm:flex-row gap-x-5'>
-    <div class='flex-auto pb-6 hidden lg:flex'>
+<div class="max-w-full mx-auto">
+  <div class="flex flex-col sm:flex-row gap-x-5 justify-center">
+    <div class="flex-auto pb-6 hidden xl:flex">
       <app-menu></app-menu>
     </div>
-    <div class='sm:w-5/6 pb-6'>
-      <div class='flex flex-col sm:flex-row sm:flex-wrap justify-center px-10 gap-4 mt-10'>
+    <div class="sm:w-5/6 pb-6">
+      <div class="flex flex-col sm:flex-row sm:flex-wrap justify-center px-10 gap-4 mt-10">
         <div>
-          <article class='flex justify-between gap-4 p-6 bg-white border border-gray-100 rounded-lg shadow-lg'>
-            <div class='p-3 text-blue-600 bg-blue-100 rounded-full'>
-              <svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='currentColor'
-                   stroke-width='2'>
-                <path stroke-linecap='round' stroke-linejoin='round'
-                      d='M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z' />
+          <article class="flex justify-between gap-4 p-6 bg-white border border-gray-100 rounded-lg shadow-lg">
+            <div class="p-3 text-blue-600 bg-blue-100 rounded-full">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                   stroke="currentColor"
+                   stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
               </svg>
             </div>
             <div>
-              <div class='text-center'>
-                <p class='text-2xl font-medium text-gray-900'>123</p>
-                <p class='text-sm text-gray-600'>Comments</p>
+              <div class="text-center">
+                <p class="text-2xl font-medium text-gray-900">123</p>
+                <p class="text-sm text-gray-600">Comments</p>
               </div>
             </div>
             <div></div>
           </article>
         </div>
         <div>
-          <article class='flex justify-between gap-4 p-6 bg-white border border-gray-100 rounded-lg shadow-lg'>
-            <div class='p-3 text-blue-600 bg-blue-100 rounded-full'>
-              <svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='currentColor'
-                   stroke-width='2'>
-                <path stroke-linecap='round' stroke-linejoin='round'
-                      d='M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z' />
+          <article class="flex justify-between gap-4 p-6 bg-white border border-gray-100 rounded-lg shadow-lg">
+            <div class="p-3 text-blue-600 bg-blue-100 rounded-full">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                   stroke="currentColor"
+                   stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z" />
               </svg>
             </div>
             <div>
-              <div class='text-center'>
-                <p class='text-2xl font-medium text-gray-900'>123</p>
-                <p class='text-sm text-gray-600'>Contact Messages</p>
+              <div class="text-center">
+                <p class="text-2xl font-medium text-gray-900">123</p>
+                <p class="text-sm text-gray-600">Contact Messages</p>
               </div>
             </div>
             <div></div>
           </article>
         </div>
         <div>
-          <article class='flex justify-between gap-4 p-6 bg-white border border-gray-100 rounded-lg shadow-lg'>
-            <div class='p-3 text-blue-600 bg-blue-100 rounded-full'>
-              <svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='currentColor'
-                   stroke-width='2'>
-                <path stroke-linecap='round' stroke-linejoin='round'
-                      d='M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z' />
+          <article class="flex justify-between gap-4 p-6 bg-white border border-gray-100 rounded-lg shadow-lg">
+            <div class="p-3 text-blue-600 bg-blue-100 rounded-full">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                   stroke="currentColor"
+                   stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
               </svg>
             </div>
             <div>
-              <div class='text-center'>
-                <p class='text-2xl font-medium text-gray-900'>123</p>
-                <p class='text-sm text-gray-600'>Members</p>
+              <div class="text-center">
+                <p class="text-2xl font-medium text-gray-900">123</p>
+                <p class="text-sm text-gray-600">Members</p>
               </div>
             </div>
             <div></div>
           </article>
         </div>
       </div>
-      <div class='flex flex-col justify-center px-10 gap-4 mt-10'>
+      <div class="flex flex-col justify-center px-10 gap-4 mt-10">
         <div>
-          <div class='bg-white border border-gray-100 rounded-lg shadow-lg pb-10 pt-5 px-5'>
-            <div class='pb-5 text-md text-gray-600'>Latest Comments</div>
-            <div class='overflow-hidden overflow-x-auto border border-gray-100 rounded'>
-              <table class='min-w-full text-sm divide-y divide-gray-200'>
+          <div class="bg-white border border-gray-100 rounded-lg shadow-lg pb-10 pt-5 px-5">
+            <div class="pb-5 text-md text-gray-600">Latest Comments</div>
+            <div class="overflow-hidden overflow-x-auto border border-gray-100 rounded">
+              <table class="min-w-full text-sm divide-y divide-gray-200">
                 <thead>
                 <tr>
-                  <th class='px-4 py-2 font-medium text-left text-gray-900'>Name</th>
-                  <th class='px-4 py-2 font-medium text-left text-gray-900'>Article</th>
-                  <th class='px-4 py-2 font-medium text-left text-gray-900'>Date</th>
+                  <th class="px-4 py-2 font-medium text-left text-gray-900">Name</th>
+                  <th class="px-4 py-2 font-medium text-left text-gray-900">Article</th>
+                  <th class="px-4 py-2 font-medium text-left text-gray-900">Date</th>
                 </tr>
                 </thead>
-                <tbody class='divide-y divide-gray-100'>
+                <tbody class="divide-y divide-gray-100">
                 <tr>
-                  <td class='px-4 py-2'>John Doe</td>
-                  <td class='px-4 py-2'>Lorem Ipsum is simply dummy text 4</td>
-                  <td class='px-4 py-2'>01/08/2022</td>
+                  <td class="px-4 py-2">John Doe</td>
+                  <td class="px-4 py-2">Lorem Ipsum is simply dummy text 4</td>
+                  <td class="px-4 py-2">01/08/2022</td>
                 </tr>
                 <tr>
-                  <td class='px-4 py-2'>John Doe</td>
-                  <td class='px-4 py-2'>Lorem Ipsum is simply dummy text 4</td>
-                  <td class='px-4 py-2'>01/08/2022</td>
+                  <td class="px-4 py-2">John Doe</td>
+                  <td class="px-4 py-2">Lorem Ipsum is simply dummy text 4</td>
+                  <td class="px-4 py-2">01/08/2022</td>
                 </tr>
                 <tr>
-                  <td class='px-4 py-2'>John Doe</td>
-                  <td class='px-4 py-2'>Lorem Ipsum is simply dummy text 4</td>
-                  <td class='px-4 py-2'>01/08/2022</td>
+                  <td class="px-4 py-2">John Doe</td>
+                  <td class="px-4 py-2">Lorem Ipsum is simply dummy text 4</td>
+                  <td class="px-4 py-2">01/08/2022</td>
                 </tr>
                 <tr>
-                  <td class='px-4 py-2'>John Doe</td>
-                  <td class='px-4 py-2'>Lorem Ipsum is simply dummy text 4</td>
-                  <td class='px-4 py-2'>01/08/2022</td>
+                  <td class="px-4 py-2">John Doe</td>
+                  <td class="px-4 py-2">Lorem Ipsum is simply dummy text 4</td>
+                  <td class="px-4 py-2">01/08/2022</td>
                 </tr>
                 </tbody>
               </table>
@@ -101,37 +104,37 @@
           </div>
         </div>
         <div>
-          <div class='bg-white border border-gray-100 rounded-lg shadow-lg pb-10 pt-5 px-5'>
-            <div class='pb-5 text-md text-gray-600'>Latest Contact Messages</div>
-            <div class='overflow-hidden overflow-x-auto border border-gray-100 rounded'>
-              <table class='min-w-full text-sm divide-y divide-gray-200'>
+          <div class="bg-white border border-gray-100 rounded-lg shadow-lg pb-10 pt-5 px-5">
+            <div class="pb-5 text-md text-gray-600">Latest Contact Messages</div>
+            <div class="overflow-hidden overflow-x-auto border border-gray-100 rounded">
+              <table class="min-w-full text-sm divide-y divide-gray-200">
                 <thead>
                 <tr>
-                  <th class='px-4 py-2 font-medium text-left text-gray-900'>First Name</th>
-                  <th class='px-4 py-2 font-medium text-left text-gray-900'>Last Name</th>
-                  <th class='px-4 py-2 font-medium text-left text-gray-900'>Date</th>
+                  <th class="px-4 py-2 font-medium text-left text-gray-900">First Name</th>
+                  <th class="px-4 py-2 font-medium text-left text-gray-900">Last Name</th>
+                  <th class="px-4 py-2 font-medium text-left text-gray-900">Date</th>
                 </tr>
                 </thead>
-                <tbody class='divide-y divide-gray-100'>
+                <tbody class="divide-y divide-gray-100">
                 <tr>
-                  <td class='px-4 py-2'>John</td>
-                  <td class='px-4 py-2'>Doe</td>
-                  <td class='px-4 py-2'>01/08/2022</td>
+                  <td class="px-4 py-2">John</td>
+                  <td class="px-4 py-2">Doe</td>
+                  <td class="px-4 py-2">01/08/2022</td>
                 </tr>
                 <tr>
-                  <td class='px-4 py-2'>John</td>
-                  <td class='px-4 py-2'>Doe</td>
-                  <td class='px-4 py-2'>01/08/2022</td>
+                  <td class="px-4 py-2">John</td>
+                  <td class="px-4 py-2">Doe</td>
+                  <td class="px-4 py-2">01/08/2022</td>
                 </tr>
                 <tr>
-                  <td class='px-4 py-2'>John</td>
-                  <td class='px-4 py-2'>Doe</td>
-                  <td class='px-4 py-2'>01/08/2022</td>
+                  <td class="px-4 py-2">John</td>
+                  <td class="px-4 py-2">Doe</td>
+                  <td class="px-4 py-2">01/08/2022</td>
                 </tr>
                 <tr>
-                  <td class='px-4 py-2'>John</td>
-                  <td class='px-4 py-2'>Doe</td>
-                  <td class='px-4 py-2'>01/08/2022</td>
+                  <td class="px-4 py-2">John</td>
+                  <td class="px-4 py-2">Doe</td>
+                  <td class="px-4 py-2">01/08/2022</td>
                 </tr>
                 </tbody>
               </table>
@@ -139,37 +142,37 @@
           </div>
         </div>
         <div>
-          <div class='bg-white border border-gray-100 rounded-lg shadow-lg pb-10 pt-5 px-5'>
-            <div class='pb-5 text-md text-gray-600'>Latest Members</div>
-            <div class='overflow-hidden overflow-x-auto border border-gray-100 rounded'>
-              <table class='min-w-full text-sm divide-y divide-gray-200'>
+          <div class="bg-white border border-gray-100 rounded-lg shadow-lg pb-10 pt-5 px-5">
+            <div class="pb-5 text-md text-gray-600">Latest Members</div>
+            <div class="overflow-hidden overflow-x-auto border border-gray-100 rounded">
+              <table class="min-w-full text-sm divide-y divide-gray-200">
                 <thead>
                 <tr>
-                  <th class='px-4 py-2 font-medium text-left text-gray-900'>First Name</th>
-                  <th class='px-4 py-2 font-medium text-left text-gray-900'>Last Name</th>
-                  <th class='px-4 py-2 font-medium text-left text-gray-900'>Date</th>
+                  <th class="px-4 py-2 font-medium text-left text-gray-900">First Name</th>
+                  <th class="px-4 py-2 font-medium text-left text-gray-900">Last Name</th>
+                  <th class="px-4 py-2 font-medium text-left text-gray-900">Date</th>
                 </tr>
                 </thead>
-                <tbody class='divide-y divide-gray-100'>
+                <tbody class="divide-y divide-gray-100">
                 <tr>
-                  <td class='px-4 py-2'>John</td>
-                  <td class='px-4 py-2'>Doe</td>
-                  <td class='px-4 py-2'>01/08/2022</td>
+                  <td class="px-4 py-2">John</td>
+                  <td class="px-4 py-2">Doe</td>
+                  <td class="px-4 py-2">01/08/2022</td>
                 </tr>
                 <tr>
-                  <td class='px-4 py-2'>John</td>
-                  <td class='px-4 py-2'>Doe</td>
-                  <td class='px-4 py-2'>01/08/2022</td>
+                  <td class="px-4 py-2">John</td>
+                  <td class="px-4 py-2">Doe</td>
+                  <td class="px-4 py-2">01/08/2022</td>
                 </tr>
                 <tr>
-                  <td class='px-4 py-2'>John</td>
-                  <td class='px-4 py-2'>Doe</td>
-                  <td class='px-4 py-2'>01/08/2022</td>
+                  <td class="px-4 py-2">John</td>
+                  <td class="px-4 py-2">Doe</td>
+                  <td class="px-4 py-2">01/08/2022</td>
                 </tr>
                 <tr>
-                  <td class='px-4 py-2'>John</td>
-                  <td class='px-4 py-2'>Doe</td>
-                  <td class='px-4 py-2'>01/08/2022</td>
+                  <td class="px-4 py-2">John</td>
+                  <td class="px-4 py-2">Doe</td>
+                  <td class="px-4 py-2">01/08/2022</td>
                 </tr>
                 </tbody>
               </table>
