--- a/src/app/pages/pages/pages-list/pages-list.component.html
+++ b/src/app/pages/pages/pages-list/pages-list.component.html
@@ -1,91 +1,91 @@
 <app-navbar></app-navbar>
-<div class='max-w-full mx-auto'>
-  <div class='flex flex-col sm:flex-row gap-x-5'>
-    <div class='flex-auto pb-6 hidden lg:flex'>
+<div class="max-w-full mx-auto">
+  <div class="flex flex-col sm:flex-row gap-x-5 justify-center">
+    <div class="flex-auto pb-6 hidden xl:flex">
       <app-menu></app-menu>
     </div>
-    <div class='sm:w-5/6 pb-6'>
-      <div class='flex flex-col justify-center px-10 gap-4 mt-10'>
+    <div class="sm:w-5/6 pb-6">
+      <div class="flex flex-col justify-center px-10 gap-4 mt-10">
         <div [ngClass]="notificationShow ? 'block' : 'hidden'">
-          <div class='bg-white rounded-lg shadow-lg p-5'>
-            <div class='flex justify-between'>
-              <div class='flex-none w-14 items-center'>
+          <div class="bg-white rounded-lg shadow-lg p-5">
+            <div class="flex justify-between">
+              <div class="flex-none w-14 items-center">
                 <div *ngIf="notificationStatus === 'success'">
-                  <div class='bg-green-200 rounded-full p-2'>
-                    <svg xmlns='http://www.w3.org/2000/svg' class='w-auto text-green-700' fill='none'
-                         viewBox='0 0 24 24' stroke='currentColor' stroke-width='2'>
-                      <path stroke-linecap='round' stroke-linejoin='round'
-                            d='M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z' />
+                  <div class="bg-green-200 rounded-full p-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-auto text-green-700" fill="none"
+                         viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                      <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
                     </svg>
                   </div>
                 </div>
                 <div *ngIf="notificationStatus === 'error'">
-                  <div class='bg-red-200 rounded-full p-2'>
-                    <svg xmlns='http://www.w3.org/2000/svg' class='w-auto text-red-700' fill='none'
-                         viewBox='0 0 24 24' stroke='currentColor' stroke-width='2'>
-                      <path stroke-linecap='round' stroke-linejoin='round'
-                            d='M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z' />
+                  <div class="bg-red-200 rounded-full p-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-auto text-red-700" fill="none"
+                         viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                      <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
                     </svg>
                   </div>
                 </div>
               </div>
-              <div class='flex-auto'>
-                <div class='text-center flex flex-col text-center items-center'>
-                  <h3 class='text-lg leading-6 text-gray-900'>Notification</h3>
-                  <div class='mt-2'>
-                    <p class='text-sm text-gray-500'>{{ notificationMessage }}</p>
+              <div class="flex-auto">
+                <div class="text-center flex flex-col text-center items-center">
+                  <h3 class="text-lg leading-6 text-gray-900">Notification</h3>
+                  <div class="mt-2">
+                    <p class="text-sm text-gray-500">{{ notificationMessage }}</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class='bg-white border border-gray-100 rounded-lg shadow-lg pb-10 pt-5 px-5'>
-          <div class='pb-5 text-md text-gray-600'>Pages</div>
-          <div class='overflow-hidden overflow-x-auto border border-gray-100 rounded'>
-            <table class='min-w-full text-sm divide-y divide-gray-200'>
+        <div class="bg-white border border-gray-100 rounded-lg shadow-lg pb-10 pt-5 px-5">
+          <div class="pb-5 text-md text-gray-600">Pages</div>
+          <div class="overflow-hidden overflow-x-auto border border-gray-100 rounded">
+            <table class="min-w-full text-sm divide-y divide-gray-200">
               <thead>
               <tr>
-                <th class='px-4 py-2 font-medium text-left text-gray-900'>Title</th>
-                <th class='px-4 py-2 font-medium text-left text-gray-900 w-10'>Status</th>
-                <th class='px-4 py-2 font-medium text-left text-gray-900 w-10'>Actions</th>
+                <th class="px-4 py-2 font-medium text-left text-gray-900">Title</th>
+                <th class="px-4 py-2 font-medium text-left text-gray-900 w-10">Status</th>
+                <th class="px-4 py-2 font-medium text-left text-gray-900 w-10">Actions</th>
               </tr>
               </thead>
-              <tbody class='divide-y divide-gray-100'>
-              <tr *ngFor='let page of pages'>
-                <td class='px-4 py-2'><a routerLink='/pages/detail/{{page._id}}'>{{page.title}}</a></td>
-                <td class='px-4 py-2'>
+              <tbody class="divide-y divide-gray-100">
+              <tr *ngFor="let page of pages">
+                <td class="px-4 py-2"><a routerLink="/pages/detail/{{page._id}}">{{page.title}}</a></td>
+                <td class="px-4 py-2">
                   <div [ngClass]="{
                        'text-green-500': page.publishStatus === 'published',
                        'text-red-500': page.publishStatus==='draft'
                        }"
-                       class='capitalize'>
+                       class="capitalize">
                     {{page.publishStatus}}
                   </div>
                 </td>
-                <td class='px-4 py-2 flex items-center gap-2'>
-                  <a class='flex justify-center items-center text-sm text-gray-600 hover:text-black'
-                     routerLink='/pages/detail/{{page._id}}'>
+                <td class="px-4 py-2 flex items-center gap-2">
+                  <a class="flex justify-center items-center text-sm text-gray-600 hover:text-black"
+                     routerLink="/pages/detail/{{page._id}}">
                     <div>
-                      <svg xmlns='http://www.w3.org/2000/svg' class='h-5 w-5' fill='none' viewBox='0 0 24 24'
-                           stroke='currentColor'
-                           stroke-width='2'>
-                        <path stroke-linecap='round' stroke-linejoin='round'
-                              d='M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z' />
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                           stroke="currentColor"
+                           stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                              d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
                       </svg>
                     </div>
-                    <div class='ml-2'>Edit</div>
+                    <div class="ml-2">Edit</div>
                   </a>
-                  <span class='flex justify-center items-center text-sm text-red-500 hover:text-red-700 cursor-pointer'
-                        (click)='remove(page._id)'>
+                  <span class="flex justify-center items-center text-sm text-red-500 hover:text-red-700 cursor-pointer"
+                        (click)="remove(page._id)">
                     <div>
-                      <svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24'
-                           stroke='currentColor' stroke-width='2'>
-                        <path stroke-linecap='round' stroke-linejoin='round'
-                              d='M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16' />
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                           stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                              d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
                       </svg>
                     </div>
-                    <div class='ml-2'>Delete</div>
+                    <div class="ml-2">Delete</div>
                   </span>
                 </td>
               </tr>
